--- a/less/header.less
+++ b/less/header.less
@@ -31,12 +31,16 @@
       font-size: 11px;
       color: @brand-primary;
     }
+
+    .navbar-nav li.top-level{
+      max-width: 11em;
+    }
     .navbar-nav > li > a,
     .navbar-nav > li > span {
       padding-top: 29px;
       padding-bottom: 13px;
       line-height: 13px;
-      max-width: 11em;
+      max-width: 10.4em;
       height: 8em;
       display: table-cell;
       vertical-align: bottom;
